--- a/index.html
+++ b/index.html
@@ -4,9 +4,26 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Agenda - JavaScript</title>
-    <link rel="stylesheet" href="">
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    
+
+    <div id="cabecalho" class="cabecalho">
+        Cabeçalho
+    </div>
+
+    <div id="menu" class="menu">
+        <button id="btn_home" class="aba abaSelecionada">Home</button>
+        <button id="btn_novo" class="aba">Novo</button>
+        <button id="btn_pesquisar" class="aba">Pesquisar</button>
+        <button id="btn_gestao" class="aba">Gestão</button>
+        <button id="btn_sobre" class="aba">sobre</button>
+    </div>
+
+    <div id="principal" class="principal">
+        <iframe name="if_principal" src=""></iframe>
+    </div>
+
+    <script src="script.js"></script>
 </body>
 </html>
